# OvertimeApp

./: .flutter-plugins-dependencies  .last_build_id  README.md  flutter_bootstrap.js  flutter_service_worker.js  index.html  pubspec.yaml  version.json
.dart_tool/: package_config.json  package_graph.json
.dart_tool/extension_discovery/: devtools.json  vs_code.json
.dart_tool/flutter_build/2559117ad1360a8c573279cb28255bc1/: .filecache  app.dill.deps  dart2js.d  dart2js.stamp  dart2wasm.stamp  dart_build.d  dart_build.stamp  dart_build_result.json  flutter_assets.d  main.dart  main.dart.js  main.dart.js.deps  outputs.json  service_worker.d  web_entrypoint.stamp  web_release_bundle.stamp  web_resources.d  web_service_worker.stamp  web_static_assets.stamp  web_templated_files.stamp
lib/: main.dart  theme.dart
lib/models/: overtime_entry.dart
lib/screens/: add_entry_screen.dart  records_screen.dart
lib/services/: pdf_service.dart  storage_service.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/ephemeral/.plugin_symlinks/: path_provider_windows  shared_preferences_windows
